force-app/main/default/objects/Zendesk__Zendesk_Widget_Entity__c/Zendesk__Zendesk_Widget_Entity__c.object-meta.xml
<CustomObject>
    <label>Zendesk Support Widget Config</label>
    <nameField>
        <label>Widget Config Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zendesk Support Widget Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>