force-app/main/default/objects/Zendesk__Zendesk_Widget_Entity__c/fields/Zendesk__Name_Field__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Name_Field__c</fullName>
    <label>Name Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>