force-app/main/default/objects/Zendesk__Zendesk_Widget_Entity__c/fields/Zendesk__Organization_Name_Field__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Organization_Name_Field__c</fullName>
    <label>Organization Name Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>